use a pseudoframe as a parent only when it has children, bug 336291 r/sr=bzbarsky