layout/base/nsCSSFrameConstructor.cpp
@@ -2621,9 +2621,9 @@ ProcessPseudoRowGroupFrame(nsPseudoFrameData& aPseudoData,
   nsresult rv = NS_OK;
 
   aParent = aPseudoData.mFrame;
-  nsTableRowGroupFrame* rgFrame = nsTableFrame::GetRowGroupFrame(aParent);
   nsFrameItems* items = &aPseudoData.mChildList;
   if (items && items->childList) {
+    nsTableRowGroupFrame* rgFrame = nsTableFrame::GetRowGroupFrame(aParent);
     rv = rgFrame->SetInitialChildList(nsnull, items->childList);
     if (NS_FAILED(rv)) return rv;
   }
